fixing textarea alignment

--- a/src/components/Chat/MessageComposer/styles.module.css
+++ b/src/components/Chat/MessageComposer/styles.module.css
@@ -14,8 +14,8 @@
   border-width: 0;
   outline: none;
   width: 100%;
-  padding-top: 1.5rem;
-  padding-bottom: 1.5rem;
+  padding-top: 1.65rem;
+  padding-bottom: 1rem;
   padding-left: 5rem;
 }
 
